<resources>
    <string name="app_name">foodies</string>
    <string name="text_home_name">Hai, Ulin Nuha !</string>
    <string name="text_greetings">Hello, what do you want to eat today?</string>
    <string name="text_title_banner">Today Discount!!!</string>
    <string name="text_desc_banner">klick banner untuk membeli makanan</string>
    <string name="text_list_menu">List Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_cart">Cart</string>
    <string name="title_tab_profile">Profile</string>
    <string name="text_title_lokasi">Location</string>
    <string name="text_add_to_cart">Add to Cart - </string>
    <string name="text_count">1</string>
    <string name="text_add_to_cart_on_pressed">Kamu menambahkan %1$s porsi ke keranjang</string>
    <string name="loading">Loading</string>
    <string name="add_to_cart_failed">Gagal menambahkan barang</string>
    <string name="hint_name">Name</string>
    <string name="text_name">Ulin Nuha</string>
    <string name="text_hint_username">Username</string>
    <string name="text_username">Ulinnnn</string>
    <string name="text_hint_email">Email</string>
    <string name="text_email">unuha89.un@gmail.com</string>
    <string name="text_edit">Edit</string>
    <string name="text_save">Save</string>
    <string name="text_hint_notes">Notes</string>
    <string name="text_title_your_cart">Your Cart</string>
    <string name="text_checkout">Checkout Now</string>
    <string name="text_login_to_checkout">Login to Checkout</string>
    <string name="text_total_price">Total Price</string>
    <string name="total_quantity">x%s</string>
    <string name="text_cart_is_empty">Cart empty</string>
    <string name="text_title_order_confirmation">Confirm Your Order</string>
    <string name="text_delivery_method">Delivery Method</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cash">Cash</string>
    <string name="text_e_wallet">E-Wallet</string>
    <string name="shopping_summary">Shopping summary</string>
    <string name="text_button_Add_to_Cart">"Add to cart - %1$s"</string>
    <string name="text_total_price_start_value">Rp0,00</string>
    <string name="text_back_to_home">Back to Home</string>
    <string name="text_dialog_title">Your order will be sent immediately</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_register">Register</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="error_checkout">Error Checkout</string>
</resources>